tests/ui/issues/issue-36400.stderr
error[E0596]: cannot borrow `*x` as mutable, as `x` is not declared as mutable
  --> $DIR/issue-36400.rs:5:7
   |
LL |     f(&mut *x);
   |       ^^^^^^^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
LL |     let mut x = Box::new(3);
   |         +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0596`.
